--- a/tooltip.html
+++ b/tooltip.html
@@ -9,11 +9,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+        crossorigin="anonymous">
+
+    <style>
+        .bs-tooltip-top {
+            top: -10px !important;
+        }
+
+        .bs-tooltip-right {
+            left: 10px !important;
+        }
+
+        .bs-tooltip-bottom {
+            top: 10px !important;
+        }
+
+        .bs-tooltip-left {
+            left: -10px !important;
+        }
+    </style>
+
 
     <script>
-        $(document).ready(function () {           
-            $("#myTooltip").append(tooltip("Allo","http://www.yahoo.com", "Welcome to linux", "top", "far fa-question-circle"));
+        $(document).ready(function () {
+            $("#myTooltip").append(tooltip("Allo", "http://www.yahoo.com", "Welcome to linux", "top", "far fa-question-circle"));
             $('[data-toggle="tooltip"]').tooltip();
         });
 
