--- a/tooltip.html
+++ b/tooltip.html
@@ -28,6 +28,32 @@
         .bs-tooltip-left {
             left: -10px !important;
         }
+
+        .tooltip-inner {
+            background-color: #206ebb !important;
+            color: #e9ecf0;
+        }
+
+        .bs-tooltip-top .arrow::before,
+        .bs-tooltip-auto[x-placement^="top"] .arrow::before {
+            border-top-color: #0F324D !important;
+        }
+
+        .bs-tooltip-right .arrow::before,
+        .bs-tooltip-auto[x-placement^="right"] .arrow::before {
+            border-right-color: #0F324D !important;
+        }
+
+        .bs-tooltip-bottom .arrow::before,
+        .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
+            border-bottom-color: #0F324D !important;
+        }
+
+
+        .bs-tooltip-left .arrow::before,
+        .bs-tooltip-auto[x-placement^="left"] .arrow::before {
+            border-left-color: #0F324D !important;
+        }
     </style>
 
 
